k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netflow
  labels:
    app.kubernetes.io/part-of: netflow
    # Enforce the "restricted" Pod Security Standard on this namespace.
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
